#139 fix scrolling on ios

--- a/packages/web/src/components/other/page_not_found.css
+++ b/packages/web/src/components/other/page_not_found.css
@@ -3,7 +3,6 @@
     height: 100vh;
     width: 100vw;
     font-family: 'Poppins';
-    overflow: hidden;
 }
 .page-not-found-logo {
     display: flex;
@@ -79,15 +78,15 @@
 
 @media only screen and (max-width: 900px) {
     .page-not-found {
-        min-height: 100vh;
-        min-height: -webkit-fill-available;
+        overflow: hidden;
+        position: fixed;
     }
     .background-not-found {
         margin-top: 0;
-        /* height: 80vh; */
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 78vh;
         flex-direction: column-reverse;
     }
     .hubzie-UFO-image {
